{
    "name": "Controls",
    "maps": [
        {
            "name": "Player",
            "id": "7547e466-8fee-4790-8e25-87db695a27cb",
            "actions": [
                {
                    "name": "Movement",
                    "type": "Value",
                    "id": "66abb678-bd7f-425c-b846-3a753fa00625",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "RunModifier",
                    "type": "Value",
                    "id": "6362e2ed-f9fd-424f-9e3c-117b5a10fba8",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Jump",
                    "type": "Value",
                    "id": "07b65bd3-5f96-4064-b992-7a53bdb22a7c",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Attack",
                    "type": "Button",
                    "id": "373d5847-bfb9-4988-9015-d86fe6062b02",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "QuickSlot1",
                    "type": "Button",
                    "id": "d8ea26df-ebfb-437e-a453-753ab9056a7a",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "QuickSlot2",
                    "type": "Button",
                    "id": "f0fb166e-9ead-47bb-bd62-431019b680f6",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "QuickSlot3",
                    "type": "Button",
                    "id": "336a57e6-0d57-40cd-919d-a2aa254adc7a",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "QuickSlot4",
                    "type": "Button",
                    "id": "b2f7e9a9-114f-4c0b-b9e8-7296e1737932",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "QuickSlot5",
                    "type": "Button",
                    "id": "411680a4-86a2-4bbd-bdaa-37a80989dbeb",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "QuickSlot6",
                    "type": "Button",
                    "id": "5f357eee-37d1-48be-bc29-a50332c64e40",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "QuickSlot7",
                    "type": "Button",
                    "id": "150a3f7d-f437-422d-be03-011303678140",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "QuickSlot8",
                    "type": "Button",
                    "id": "d4c2bf09-efb7-461d-b9f9-ae472180b271",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "2D Vector",
                    "id": "e050629c-2d5d-4f3e-89a0-f20caf5eede5",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "Up",
                    "id": "91d7e2e6-35a8-4258-9442-7eda060f4a05",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "PC",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "Down",
                    "id": "c52646c5-f5ad-412c-8508-323cf6ba09e7",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "PC",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "Left",
                    "id": "c38779c2-4ca0-49bd-a219-4bff925a599a",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "PC",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "Right",
                    "id": "6a799b08-e2f2-466b-bed8-bc7f890c50e6",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "PC",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "93e2c267-eee6-4de6-9582-32747dcc4df2",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "PC",
                    "action": "Jump",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "6dacd956-a9e3-4740-8410-c5455919cbb0",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "PC",
                    "action": "Attack",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "9f0b5ed6-b61b-49bc-b9cc-f640d27fd729",
                    "path": "<Keyboard>/q",
                    "interactions": "",
                    "processors": "",
                    "groups": "PC",
                    "action": "QuickSlot1",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "f8475f97-c077-4f03-a64b-a6478e148f78",
                    "path": "<Keyboard>/e",
                    "interactions": "",
                    "processors": "",
                    "groups": "PC",
                    "action": "QuickSlot2",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "ecd51565-9d90-4454-be76-ce4d1bef672c",
                    "path": "<Keyboard>/r",
                    "interactions": "",
                    "processors": "",
                    "groups": "PC",
                    "action": "QuickSlot3",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "f701a91a-7f00-45d8-bf90-4d32043894a3",
                    "path": "<Keyboard>/f",
                    "interactions": "",
                    "processors": "",
                    "groups": "PC",
                    "action": "QuickSlot4",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "4f472e9b-0966-4351-9ab7-3e636ca26ebb",
                    "path": "<Keyboard>/1",
                    "interactions": "",
                    "processors": "",
                    "groups": "PC",
                    "action": "QuickSlot5",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "49530d6b-d899-4afa-b384-8faef98e6fad",
                    "path": "<Keyboard>/2",
                    "interactions": "",
                    "processors": "",
                    "groups": "PC",
                    "action": "QuickSlot6",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "06c5baaf-a6d0-43ae-ba3e-dfaf57f9a6ce",
                    "path": "<Keyboard>/3",
                    "interactions": "",
                    "processors": "",
                    "groups": "PC",
                    "action": "QuickSlot7",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "d256b432-9137-4521-86aa-7bbaed9accc8",
                    "path": "<Keyboard>/4",
                    "interactions": "",
                    "processors": "",
                    "groups": "PC",
                    "action": "QuickSlot8",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "b5925f5a-3d90-40b0-8437-04102b377551",
                    "path": "<Keyboard>/leftCtrl",
                    "interactions": "",
                    "processors": "",
                    "groups": "PC",
                    "action": "RunModifier",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "UI",
            "id": "6b51944d-f4ee-418f-ad64-9bac70c82d21",
            "actions": [
                {
                    "name": "StatusUIToggle",
                    "type": "Button",
                    "id": "9cd3b76f-bbbf-4070-ac8e-1b03276b7c09",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "SkillUIToggle",
                    "type": "Button",
                    "id": "51afc5a8-09ea-48b7-a31f-b74e4fcdd23a",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "InventoryUIToggle",
                    "type": "Button",
                    "id": "7377b075-bf28-404b-b991-60f33aea17a4",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "EquipmentUIToggle",
                    "type": "Button",
                    "id": "a8ee5f1d-e1d4-440a-b115-11e4f16474ab",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "ExitUI",
                    "type": "Button",
                    "id": "f1ad165f-3ab3-41a1-81ce-d6eaa65576cd",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "QuestUIToggle",
                    "type": "Button",
                    "id": "6c98a246-8369-474f-9c5a-302483cbbff7",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "94c3a91e-074a-43a5-8688-f53fa0004c88",
                    "path": "<Keyboard>/p",
                    "interactions": "",
                    "processors": "",
                    "groups": "PC",
                    "action": "StatusUIToggle",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "afe65a9c-833b-4bab-8a66-4cadc32398ef",
                    "path": "<Keyboard>/o",
                    "interactions": "",
                    "processors": "",
                    "groups": "PC",
                    "action": "SkillUIToggle",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "6ede53f5-ccc2-4e5a-b302-681ed3a023fe",
                    "path": "<Keyboard>/i",
                    "interactions": "",
                    "processors": "",
                    "groups": "PC",
                    "action": "InventoryUIToggle",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "f6f17bcf-33d7-4c60-b0c1-1a52af38652b",
                    "path": "<Keyboard>/u",
                    "interactions": "",
                    "processors": "",
                    "groups": "PC",
                    "action": "EquipmentUIToggle",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "1d16064a-e3ad-42fc-abea-53970564e28b",
                    "path": "<Keyboard>/escape",
                    "interactions": "",
                    "processors": "",
                    "groups": "PC",
                    "action": "ExitUI",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "da8f8e9e-4cb6-4b13-89ad-837391a26bd0",
                    "path": "<Keyboard>/l",
                    "interactions": "",
                    "processors": "",
                    "groups": "PC",
                    "action": "QuestUIToggle",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "Manager",
            "id": "f89de2bb-db67-479d-a919-5b58aa554134",
            "actions": [
                {
                    "name": "ModeChange",
                    "type": "Button",
                    "id": "86ce69ea-72d9-4dbf-851b-dbe92a92f47f",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Interact",
                    "type": "Button",
                    "id": "aa421be5-1416-4d50-a124-a82ea172c2e1",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "SubInteract1",
                    "type": "Button",
                    "id": "5e4d142d-92f3-4a4a-b174-0a0fb065417b",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "SubInteract2",
                    "type": "Button",
                    "id": "3b3358bc-b263-4725-bbc2-6e5b13bb42b5",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "SubInteract3",
                    "type": "Button",
                    "id": "d4687aa8-fa12-43e7-94dc-b94c16dfbe0d",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "SubInteract4",
                    "type": "Button",
                    "id": "fbf67c54-3192-4dff-a3a8-8b92f5730afd",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "c13c9bd7-8b90-4171-aca5-ad4feca90b4c",
                    "path": "<Keyboard>/leftAlt",
                    "interactions": "",
                    "processors": "",
                    "groups": "PC",
                    "action": "ModeChange",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "63a6f157-73a1-44d5-9b7b-aab5b9bdbc34",
                    "path": "<Keyboard>/g",
                    "interactions": "",
                    "processors": "",
                    "groups": "PC",
                    "action": "Interact",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "02489927-dd50-4d0b-ae87-5738c8f1cd68",
                    "path": "<Keyboard>/z",
                    "interactions": "",
                    "processors": "",
                    "groups": "PC",
                    "action": "SubInteract1",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "7d7601a5-bcfb-45c6-91d2-e3f67ba8e4a6",
                    "path": "<Keyboard>/x",
                    "interactions": "",
                    "processors": "",
                    "groups": "PC",
                    "action": "SubInteract2",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "f1b9c2a1-f375-4890-a9ec-d7f9ef906d64",
                    "path": "<Keyboard>/c",
                    "interactions": "",
                    "processors": "",
                    "groups": "PC",
                    "action": "SubInteract3",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "9616b7ab-68fc-43a2-9bd9-12a18ac8c320",
                    "path": "<Keyboard>/v",
                    "interactions": "",
                    "processors": "",
                    "groups": "PC",
                    "action": "SubInteract4",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "Cinemachine",
            "id": "dd060881-2ffc-42a6-8478-9b68bc28d655",
            "actions": [
                {
                    "name": "Look",
                    "type": "Value",
                    "id": "b6cd32e8-8c76-47a3-bf37-1593e866c552",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "4753756e-b1ef-483b-a1a7-203f7da39d90",
                    "path": "<Gamepad>/rightStick",
                    "interactions": "",
                    "processors": "",
                    "groups": "PC",
                    "action": "Look",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "45509d6b-edb8-4eb9-a973-78bc74c1e134",
                    "path": "<Pointer>/delta",
                    "interactions": "",
                    "processors": "",
                    "groups": "PC",
                    "action": "Look",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "87b4f522-de59-4924-90a1-c5042432adfd",
                    "path": "<Joystick>/{Hatswitch}",
                    "interactions": "",
                    "processors": "",
                    "groups": "PC",
                    "action": "Look",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "PC",
            "bindingGroup": "PC",
            "devices": [
                {
                    "devicePath": "<Keyboard>",
                    "isOptional": false,
                    "isOR": false
                },
                {
                    "devicePath": "<Mouse>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        }
    ]
}